added swagger documentation to dashboard API
